--- a/style.css
+++ b/style.css
@@ -615,13 +615,13 @@ form textarea {
 
 @media only screen and (max-width: 400px) {
 	h1 {
-		font-size: 1.2em;
+		font-size: 2em;
 	}
 	h2 {
-		font-size: 0.6em;
+		font-size: 0.7em;
 	}
     h3 {
-        font-size:0.6em;
+        font-size:0.8em;
     }
 	p {
 		font-size: 0.7em;
@@ -647,8 +647,9 @@ form textarea {
 	}  
   
 .container .inner .content{
-	margin: 0 30px;
+	margin: 0 0px;
     margin-top:35px;
+  margin-bottom:35px;
 	padding: 0;
 	}
 }
