--- a/style.css
+++ b/style.css
@@ -198,7 +198,7 @@ background:url(http://www.joel-butler.com/images/cooking.jpg);
 }
 
 .technicalcell {
-background:url(http://www.joel-butler.com/images/technical.jpg);
+background:url(http://www.joel-butler.com/images/technical.JPG);
   background-size:     cover;
   background-repeat:   no-repeat;
   background-position: center center;
