--- a/style.css
+++ b/style.css
@@ -164,24 +164,24 @@ background:url(http://www.joel-butler.com/images/adventure.jpg);
   background-repeat:   no-repeat;
   background-position: center center;
   border: none;
-  height: 50px;
+  height: 100px;
   font-size: 1.8em;
   font-weight:600;
   text-align:center;
-  line-height:50px;
+  line-height:100px;
 }
 
 .artcell {
-background:url(http://www.joel-butler.com/images/art.jpg);
+background:url(http://www.joel-butler.com/images/chameleon.jpg);
   background-size:     cover;
   background-repeat:   no-repeat;
   background-position: center center;
   border: none;
-  height: 50px;
+  height: 100px;
   font-size: 1.8em;
   font-weight:600;
   text-align:center;
-  line-height:50px;
+  line-height:100px;
 }
 
 .cookingcell {
@@ -190,11 +190,11 @@ background:url(http://www.joel-butler.com/images/cooking.jpg);
   background-repeat:   no-repeat;
   background-position: center center;
   border: none;
-  height: 50px;
+  height: 100px;
   font-size: 1.8em;
   font-weight:600;
   text-align:center;
-  line-height:50px;
+  line-height:100px;
 }
 
 .technicalcell {
@@ -203,11 +203,11 @@ background:url(http://www.joel-butler.com/images/technical.JPG);
   background-repeat:   no-repeat;
   background-position: center center;
   border: none;
-  height: 50px;
+  height: 100px;
   font-size: 1.8em;
   font-weight:600;
   text-align:center;
-  line-height:50px;
+  line-height:100px;
 }
 
 a:link {
