--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ body{
 	font-family: 'Slabo 27px', serif;	
 }
 
+fieldset{
+  border:none;
+}
+
 .nameimg img{
   margin: auto;
   display: block;
