--- a/style.css
+++ b/style.css
@@ -164,47 +164,7 @@ background:url(http://www.joel-butler.com/images/pct.JPG);
   line-height:50px;
 }
 
-.adventurecell {
-background:url(http://www.joel-butler.com/images/adventure.jpg);
-  background-size:     cover;
-  background-repeat:   no-repeat;
-  background-position: center center;
-  border: none;
-  height: 100px;
-  font-size: 1.8em;
-  font-weight:600;
-  text-align:center;
-  line-height:100px;
-}
-
-.artcell {
-background:url(http://www.joel-butler.com/images/chameleon.jpg);
-  background-size:     cover;
-  background-repeat:   no-repeat;
-  background-position: center center;
-  border: none;
-  height: 100px;
-  font-size: 1.8em;
-  font-weight:600;
-  text-align:center;
-  line-height:100px;
-}
-
-.cookingcell {
-background:url(http://www.joel-butler.com/images/cooking.jpg);
-  background-size:     cover;
-  background-repeat:   no-repeat;
-  background-position: center center;
-  border: none;
-  height: 100px;
-  font-size: 1.8em;
-  font-weight:600;
-  text-align:center;
-  line-height:100px;
-}
-
-.technicalcell {
-background:url(http://www.joel-butler.com/images/technical.JPG);
+.projectcell {
   background-size:     cover;
   background-repeat:   no-repeat;
   background-position: center center;
